modified html page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         </title>
     </head>
     <body>
-        <h1>Adding  Website</h1>
+        <h1>Calculator</h1>
+        <p>For adding use /addNumbers</p>
+        <p>For adding use /subtractNumbers</p>
+        <p>For adding use /multiplyNumbers</p>
     </body>
 </html>
