--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
 		<link rel="stylesheet" href="style.css">
 	</head>
-	<body>
+	<body class="main-body">
 		<nav>
 			<div class="nav-wrapper navbar-size">
 				<a href="#" class="brand-logo"><img class="user-image-size" src="images/ai.png"></a>
@@ -15,7 +15,7 @@
 			</div>
 		</nav>
 
-		<main class="main-body">
+		<main>
 			<div class="container">
 				<div class="row">
 					<div class="col s12 center-align">
@@ -32,21 +32,6 @@
 					</div>
 				</div>
 				<div class="row" id="card-section">
-					<div class="col s4 center-align">
-						<div class="card medium">
-							<div class="card-image waves-effect waves-block waves-light">
-								<img class="activator" src="images/cat4.jpg">
-							</div>
-							<div class="card-content">
-								<span class="card-title activator grey-text text-darken-4">Kitten<i class="material-icons right">more_vert</i></span>
-								<p><a href="#">About kitten</a></p>
-							</div>
-							<div class="card-reveal">
-								<span class="card-title grey-text text-darken-4">Kitten<i class="material-icons right">close</i></span>
-								<p class="card-text">Hello There! I just wanted to say HI to you guys. See ya!</p>
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 
@@ -55,24 +40,24 @@
 					<form class="col s12">
 						<div class="row">
 							<div class="input-field col s6">
-								<input placeholder="Placeholder" id="first_name" type="text" class="validate">
-								<label for="first_name">First Name</label>
+								<input placeholder="Title" id="title" type="text">
+								<label for="title">Title</label>
 							</div>
 							<div class="input-field col s6">
-								<input id="last_name" type="text" class="validate">
-								<label for="last_name">Last Name</label>
+								<input id="subTitle" type="text">
+								<label for="subTitle">subTitle</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-field col s12">
-								<input id="password" type="password" class="validate">
-								<label for="password">Password</label>
+								<input id="path" type="text">
+								<label for="path">Path</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-field col s12">
-								<input id="email" type="email" class="validate">
-								<label for="email">Email</label>
+								<input id="description" type="text">
+								<label for="description">Description</label>
 							</div>
 						</div>
 						<div class="row">
